[gd_scene load_steps=19 format=2]

[ext_resource path="res://assets/deathguy_theme.tres" type="Theme" id=1]
[ext_resource path="res://src/ui/ui.gd" type="Script" id=2]
[ext_resource path="res://assets/fonts/deathguy_font.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://assets/ui/coin.png" type="Texture" id=4]
[ext_resource path="res://assets/shader/material/invert.tres" type="Material" id=5]
[ext_resource path="res://assets/ui/button/pause_button_disabled.png" type="Texture" id=6]
[ext_resource path="res://assets/ui/button/sound_button_normal.png" type="Texture" id=7]
[ext_resource path="res://assets/ui/button/play_button_normal.png" type="Texture" id=8]
[ext_resource path="res://assets/ui/button/pause_button_hover.png" type="Texture" id=9]
[ext_resource path="res://assets/ui/button/sound_button_pressed.png" type="Texture" id=10]
[ext_resource path="res://assets/ui/button/play_button_hover.png" type="Texture" id=11]
[ext_resource path="res://assets/ui/button/pause_button_normal.png" type="Texture" id=12]
[ext_resource path="res://assets/sfx/click.wav" type="AudioStream" id=13]
[ext_resource path="res://assets/ui/button/music_button_normal.png" type="Texture" id=14]
[ext_resource path="res://assets/ui/button/music_button_pressed.png" type="Texture" id=15]

[sub_resource type="DynamicFont" id=1]
size = 60
font_data = ExtResource( 3 )

[sub_resource type="Animation" id=2]
resource_name = "RESET"
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Score:custom_fonts/font:size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 32 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Score:custom_colors/font_color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Score:material")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 5 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("PauseButton:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=3]
length = 1.5
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Score:custom_fonts/font:size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45, 0.5, 0.55, 0.6, 0.65, 0.7, 0.75, 0.8, 0.85, 0.9, 0.95, 1, 1.05, 1.1, 1.15, 1.2, 1.25, 1.3, 1.35, 1.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50, 51, 52, 53, 54, 55, 56, 57, 58, 59, 60 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Score:custom_colors/font_color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Score:material")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ null ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("PauseButton:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[node name="UI" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
theme = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score" type="Label" parent="."]
show_behind_parent = true
material = ExtResource( 5 )
anchor_left = 0.5
anchor_right = 0.5
margin_left = -320.0
margin_top = 128.0
margin_right = 320.0
margin_bottom = 192.0
rect_min_size = Vector2( 0, 64 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Coin" type="HBoxContainer" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -264.0
margin_top = 32.0
margin_right = 320.0
margin_bottom = 96.0
grow_horizontal = 0
rect_min_size = Vector2( 584, 64 )
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Coin"]
margin_left = 460.0
margin_right = 524.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
texture = ExtResource( 4 )

[node name="VSeparator" type="VSeparator" parent="Coin"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 528.0
margin_right = 560.0
margin_bottom = 64.0
rect_min_size = Vector2( 32, 64 )

[node name="Label" type="Label" parent="Coin"]
show_behind_parent = true
material = ExtResource( 5 )
margin_left = 564.0
margin_top = 19.0
margin_right = 584.0
margin_bottom = 44.0
grow_horizontal = 0
rect_clip_content = true
text = "0"
align = 2
valign = 1

[node name="PauseButton" type="TextureButton" parent="."]
margin_left = 32.0
margin_top = 36.0
margin_right = 88.0
margin_bottom = 92.0
rect_min_size = Vector2( 56, 56 )
focus_mode = 0
disabled = true
enabled_focus_mode = 0
texture_normal = ExtResource( 12 )
texture_hover = ExtResource( 9 )
texture_disabled = ExtResource( 6 )
expand = true

[node name="PlayButton" type="TextureButton" parent="."]
visible = false
margin_left = 32.0
margin_top = 36.0
margin_right = 88.0
margin_bottom = 92.0
rect_min_size = Vector2( 56, 56 )
focus_mode = 0
enabled_focus_mode = 0
texture_normal = ExtResource( 8 )
texture_hover = ExtResource( 11 )
expand = true

[node name="MusicButton" type="TextureButton" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -208.0
margin_top = -88.0
margin_right = -152.0
margin_bottom = -32.0
rect_min_size = Vector2( 56, 56 )
focus_mode = 0
toggle_mode = true
enabled_focus_mode = 0
texture_normal = ExtResource( 14 )
texture_pressed = ExtResource( 15 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VolumeButton" type="TextureButton" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -88.0
margin_top = -88.0
margin_right = -32.0
margin_bottom = -32.0
rect_min_size = Vector2( 56, 56 )
focus_mode = 0
toggle_mode = true
enabled_focus_mode = 0
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 10 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 13 )
volume_db = -16.0
bus = "SFX"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "RESET"
anims/RESET = SubResource( 2 )
anims/end_anim = SubResource( 3 )
[connection signal="pressed" from="PauseButton" to="." method="_on_PauseButton_pressed"]
[connection signal="pressed" from="PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="MusicButton" to="." method="_on_MusicButton_pressed"]
[connection signal="pressed" from="VolumeButton" to="." method="_on_VolumeButton_pressed"]
